--- a/src/index.html
+++ b/src/index.html
@@ -24,26 +24,30 @@
 	<link type="text/css" rel="stylesheet" href="assets/css/color.css">
 	<link type="text/css" rel="stylesheet" href="assets/css/style.css">
 	<!--=============== favicons ===============-->
-	
+
 </head>
 <body>
-  <!--loader-->
-	  <div class="loader-wrap">
+  	<!--loader-->
+	<div class="loader-wrap">
       <div class="pin">
         <div class="pulse"></div>
       </div>
     </div>
     <!--loader end-->
-  <app-root></app-root>
+  <div id="miMain">
+  
+  <app-root>
+  </app-root>
+</div>
   <!--=============== scripts ===============-->
-  <script type="text/javascript" src="assets/js/jquery.min.js"></script>
-  <script type="text/javascript" src="assets/js/plugins.js"></script>
-      <!-- owl-carousel -->
-  <script type="text/javascript" src="assets/js/owl-carousel/owl.carousel.min.js"></script>
-  <script type="text/javascript" src="assets/js/mega-menu/mega_menu.js"></script>	
-  <script type="text/javascript" src="assets/js/jquery.simple-text-rotator.js"></script>      
-  <script type="text/javascript" src="assets/js/scripts.js"></script>
+
 </body>
 <!-- Main end -->
-		
+<script type="text/javascript" src="assets/js/jquery.min.js"></script>
+<script type="text/javascript" src="assets/js/plugins.js"></script>
+    <!-- owl-carousel -->
+<script type="text/javascript" src="assets/js/owl-carousel/owl.carousel.min.js"></script>
+<script type="text/javascript" src="assets/js/mega-menu/mega_menu.js"></script>	
+<script type="text/javascript" src="assets/js/jquery.simple-text-rotator.js"></script>      
+<script type="text/javascript" src="assets/js/scripts.js"></script>
 </html>
