routing setup completed

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 	<link type="text/css" rel="stylesheet" href="assets/css/color.css">
 	<link type="text/css" rel="stylesheet" href="assets/css/style.css">
 	<!--=============== favicons ===============-->
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   	<!--loader-->
